--- a/tests/test_aux_files/lint_check/multi-output-complete.yaml
+++ b/tests/test_aux_files/lint_check/multi-output-complete.yaml
@@ -24,6 +24,18 @@ outputs:
       commands:
         - test -f ${PREFIX}/lib/libdb${SHLIB_EXT}  # [unix]
         - if not exist %LIBRARY_BIN%\libdb%SHLIB_EXT%  # [win]
+      about:
+        home: https://github.com/python/typeshed
+        summary: Typing stubs for toml
+        description: |
+          This is a PEP 561 type stub package for the toml package.
+          It can be used by type-checking tools like mypy, pyright,
+          pytype, PyCharm, etc. to check code that uses toml.
+        license: Apache-2.0 AND MIT
+        license_file: LICENSE
+        license_family: OTHER
+        dev_url: https://github.com/python/typeshed
+        doc_url: https://pypi.org/project/types-toml/
   # metapackage for old anaconda name (only available on linux/mac)
   - name: db
     requirements:
@@ -38,6 +50,19 @@ outputs:
     test:
       commands:
         - db_archive -m hello
+    about:
+      home: https://github.com/python/typeshed
+      summary: Typing stubs for toml
+      description: |
+        This is a PEP 561 type stub package for the toml package.
+        It can be used by type-checking tools like mypy, pyright,
+        pytype, PyCharm, etc. to check code that uses toml.
+      license: Apache-2.0 AND MIT
+      license_file: LICENSE
+      license_family: OTHER
+      dev_url: https://github.com/python/typeshed
+      doc_url: https://pypi.org/project/types-toml/
+
 
 test:
   imports:
