--- a/tests/test_aux_files/msys2_must_be_in_build/all_in_host_and_run_exception_multi.yaml
+++ b/tests/test_aux_files/msys2_must_be_in_build/all_in_host_and_run_exception_multi.yaml
@@ -75,3 +75,75 @@ outputs:
         - ucrt64-gcc-toolchain
         - ucrt64-xz
         - ucrt64-zlib
+  - name: posix
+    requirements:
+      host:
+        - msys2-bison
+        - msys2-diffutils
+        - msys2-flex
+        - msys2-patch
+        - msys2-posix
+        - ucrt64-bzip2
+        - ucrt64-gcc-ada
+        - ucrt64-gcc-toolchain
+        - ucrt64-xz
+        - ucrt64-zlib
+      run:
+        - msys2-bison
+        - msys2-diffutils
+        - msys2-flex
+        - msys2-patch
+        - msys2-posix
+        - ucrt64-bzip2
+        - ucrt64-gcc-ada
+        - ucrt64-gcc-toolchain
+        - ucrt64-xz
+        - ucrt64-zlib
+  - name: ucrt64-xz
+    requirements:
+      host:
+        - msys2-bison
+        - msys2-diffutils
+        - msys2-flex
+        - msys2-patch
+        - msys2-posix
+        - ucrt64-bzip2
+        - ucrt64-gcc-ada
+        - ucrt64-gcc-toolchain
+        - ucrt64-xz
+        - ucrt64-zlib
+      run:
+        - msys2-bison
+        - msys2-diffutils
+        - msys2-flex
+        - msys2-patch
+        - msys2-posix
+        - ucrt64-bzip2
+        - ucrt64-gcc-ada
+        - ucrt64-gcc-toolchain
+        - ucrt64-xz
+        - ucrt64-zlib
+  - name: m2-patch
+    requirements:
+      host:
+        - msys2-bison
+        - msys2-diffutils
+        - msys2-flex
+        - msys2-patch
+        - msys2-posix
+        - ucrt64-bzip2
+        - ucrt64-gcc-ada
+        - ucrt64-gcc-toolchain
+        - ucrt64-xz
+        - ucrt64-zlib
+      run:
+        - msys2-bison
+        - msys2-diffutils
+        - msys2-flex
+        - msys2-patch
+        - msys2-posix
+        - ucrt64-bzip2
+        - ucrt64-gcc-ada
+        - ucrt64-gcc-toolchain
+        - ucrt64-xz
+        - ucrt64-zlib
